unscd (0.48-1) UNRELEASED; urgency=low

  * New upstream release

 -- Don Armstrong <don@debian.org>  Sat, 21 Jan 2012 13:36:59 -0800

unscd (0.47-3) unstable; urgency=low

  * Only indicate that the cache is being invalidated when in debug mode
    (Closes: #622230)

 -- Don Armstrong <don@debian.org>  Mon, 30 May 2011 08:56:33 -0700

unscd (0.47-2) unstable; urgency=low

  * Remove the Provides: nscd as a workaround for (Closes: #606588) to
    avoid issues due to #606593 in insserv.

 -- Don Armstrong <don@debian.org>  Sun, 12 Dec 2010 20:32:11 -0800

unscd (0.47-1) unstable; urgency=low

  * Initial packaging for Debian (Closes: #513305)

 -- Don Armstrong <don@debian.org>  Tue, 19 Oct 2010 22:21:13 -0700