@@ -1,8 +1,8 @@
 Source: unscd
 Section: admin
 Priority: extra
-Standards-Version: 3.9.1
-Build-Depends: debhelper (>= 5), groff-base
+Standards-Version: 3.9.2
+Build-Depends: debhelper (>= 7), groff-base
 Maintainer: Don Armstrong <don@debian.org>
 VCS-Browser: http://websvn.donarmstrong.com/listing.php?repname=deb_pkgs&path=%2Funscd%2Ftrunk%2F
 VCS-Svn: http://svn.donarmstrong.com/deb_pkgs/unscd/trunk/
