@@ -16,7 +16,7 @@
 #       stat-user               (ignored; any user can stat)
 #	reload-count		(ignored; unscd should never crash)
 #	paranoia		(ignored)
-#	restart-interval	(ignored; unscd should never crash)x
+#	restart-interval	(ignored; unscd should never crash)
 #
 #       enable-cache		<service> <yes|no>
 #	positive-time-to-live	<service> <time in seconds>
